@@ -5,7 +5,7 @@ Description: Builds platform design information packages.
   data such as x, y position on chip and
   featureSet ID. The database also incorporates featureSet-level
   annotation data. The products of this packages are used by the oligo pkg.
-Version: 1.7.8
+Version: 1.7.10
 Author: Seth Falcon, Benilton Carvalho with contributions by Vince Carey and Matt Settles
 Maintainer: Benilton Carvalho <bcarvalh@jhsph.edu>
 LazyLoad: yes
@@ -46,5 +46,6 @@ Collate: AllClasses.R
          zzz.R
          pdBuilderV2TiledRegion.R
          pdBuilderV2ExonTranscription.R
+         pdBuilderV2Gene.R
 biocViews: Annotation, Infrastructure
 Packaged: Wed Jun 18 08:00:15 2008; msettles
